added allocations functionality
